[tool.poetry]
name = "blainder"
version = "0.1.0"
description = "A blaine-talking experience."
authors = ["JC <coombes.jd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.6"
Pillow = "^7.2.0"
django-directmessages = "^0.9.7"


[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
